--- a/audio/claxon/Cargo.toml
+++ b/audio/claxon/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
 name = "gst-plugin-claxon"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Ruben Gonzalez <rgonzalez@fluendo.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MIT OR Apache-2.0"
 description = "GStreamer Claxon FLAC Decoder Plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-audio.workspace = true
 claxon = { version = "0.4" }
 byte-slice-cast = "1.0"
 atomic_refcell = "0.1"
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-check.workspace = true
 
 [lib]
 name = "gstclaxon"
@@ -25,7 +25,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
