--- a/audio/csound/Cargo.toml
+++ b/audio/csound/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
 name = "gst-plugin-csound"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Natanael Mojica <neithanmo@gmail.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer Audio Filter plugin based on Csound"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-base.workspace = true
+gst-audio.workspace = true
 csound = "0.1.8"
 byte-slice-cast = "1.0"
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-check.workspace = true
 
 [lib]
 name = "gstcsound"
@@ -29,7 +29,7 @@ name = "csound-effect"
 path = "examples/effect_example.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
