--- a/audio/spotify/Cargo.toml
+++ b/audio/spotify/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "gst-plugin-spotify"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Guillaume Desmottes <guillaume@desmottes.be>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
 description = "GStreamer Spotify Plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-base.workspace = true
 librespot = { version = "0.4", default-features = false }
 tokio = "1.0"
 futures = "0.3"
 anyhow = "1.0"
 url = "2.3"
-once_cell = "1"
+once_cell.workspace = true
 
 [lib]
 name = "gstspotify"
@@ -24,7 +24,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
