--- a/generic/inter/Cargo.toml
+++ b/generic/inter/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
 name = "gst-plugin-inter"
-version = "0.11.0-alpha.1"
+version.workspace = true
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
 description = "GStreamer Inter Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-edition = "2021"
-rust-version = "1.66"
+repository.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 anyhow = "1"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
-gst_utils = { package = "gstreamer-utils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst_app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst = { workspace = true, features = ["v1_18"] }
+gst-utils.workspace = true
+gst-app.workspace = true
 once_cell = "1.0"
 
 [dev-dependencies]
 pretty_assertions = "1"
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-check.workspace = true
 futures = "0.3"
 tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
 tokio-stream = "0.1.11"
@@ -29,7 +29,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
