--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "gst-plugin-sodium"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Jordan Petridis <jordan@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 description = "GStreamer plugin for libsodium-based file encryption and decryption"
 license = "MIT"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gst = { package="gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-base.workspace = true
 sodiumoxide = "0.2.1"
 once_cell = "1.3.0"
 hex = "0.4"
@@ -24,16 +24,8 @@ serde_json = { version = "1.0", optional = true }
 [dev-dependencies]
 pretty_assertions = "1"
 rand = "0.8"
-
-[dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer-check"
-
-[dev-dependencies.gst-app]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer-app"
+gst-check.workspace = true
+gst-app.workspace = true
 
 [lib]
 name = "gstsodium"
@@ -56,7 +48,7 @@ path = "examples/decrypt_example.rs"
 required-features = ["serde", "serde_json", "clap"]
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
