--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "gst-plugin-threadshare"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 license = "LGPL-2.1-or-later"
 description = "GStreamer Threadshare Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-edition = "2021"
-rust-version = "1.70"
+repository.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 async-task = "4.3.0"
@@ -14,12 +14,12 @@ cfg-if = "1"
 concurrent-queue = "2.2.0"
 flume = "0.11"
 futures = "0.3.28"
-gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master" }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-net = { package = "gstreamer-net", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-once_cell = "1"
+gio.workspace = true
+gst.workspace = true
+gst-audio.workspace = true
+gst-net.workspace = true
+gst-rtp.workspace = true
+once_cell.workspace = true
 pin-project-lite = "0.2.0"
 polling = "3.1.0"
 rand = "0.8"
@@ -35,8 +35,8 @@ clap = { version = "4", features = ["derive"], optional = true }
 winapi = { version = "0.3.9", features = ["winsock2", "processthreadsapi"] }
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-check.workspace = true
+gst-app.workspace = true
 
 [lib]
 name = "gstthreadshare"
@@ -60,7 +60,7 @@ name = "ts-standalone"
 path = "examples/standalone/main.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 cc = "1.0.38"
 pkg-config = "0.3.15"
 
