--- a/mux/flavors/Cargo.toml
+++ b/mux/flavors/Cargo.toml
@@ -1,24 +1,24 @@
 [package]
 name = "gst-plugin-flavors"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MIT OR Apache-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer Rust FLV Plugin"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-base.workspace = true
+gst-audio.workspace = true
 num-rational = { version = "0.4", default-features = false, features = [] }
 nom = "7"
 flavors = { git = "https://github.com/rust-av/flavors" }
 muldiv = "1.0"
 byteorder = "1.0"
 smallvec = "1.0"
-once_cell = "1"
+once_cell.workspace = true
 
 [lib]
 name = "gstrsflv"
@@ -26,7 +26,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
