--- a/mux/mp4/Cargo.toml
+++ b/mux/mp4/Cargo.toml
@@ -1,21 +1,21 @@
 [package]
 name = "gst-plugin-mp4"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 license = "MPL-2.0"
 description = "GStreamer Rust MP4 Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-edition = "2021"
-rust-version = "1.70"
+repository.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 anyhow = "1"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main",  features = ["v1_18"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
-gst-pbutils = { package = "gstreamer-pbutils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
-once_cell = "1"
+gst = { workspace = true,  features = ["v1_18"] }
+gst-base = { workspace = true, features = ["v1_18"] }
+gst-audio = { workspace = true, features = ["v1_18"] }
+gst-video = { workspace = true, features = ["v1_18"] }
+gst-pbutils = { workspace = true, features = ["v1_18"] }
+once_cell.workspace = true
 
 [lib]
 name = "gstmp4"
@@ -27,7 +27,7 @@ tempfile = "3"
 url = "2"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 default = []
