--- a/net/aws/Cargo.toml
+++ b/net/aws/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "gst-plugin-aws"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Arun Raghavan <arun@arunraghavan.net>",
            "Jordan Petridis <jordan@centricular.com>",
            "Mathieu Duponchelle <mathieu@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
 description = "GStreamer Amazon Web Services plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 async-stream = "0.3.4"
@@ -21,22 +21,22 @@ aws-types = "1.0"
 aws-credential-types = "1.0"
 bytes = "1.0"
 futures = "0.3"
-gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master" }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"] }
+gio.workspace = true
+gst.workspace = true
+gst-base.workspace = true
+gst-audio = { workspace = true, features = ["v1_16"] }
 percent-encoding = "2"
 tokio = { version = "1.0", features = [ "full" ] }
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
 url = "2"
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
 chrono = { version = "0.4", features = [ "alloc" ] }
 env_logger = "0.10"
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
+gst-check = { workspace = true, features = ["v1_18"] }
 rand = "0.8"
 test-with = { version = "0.12", default-features = false }
 
@@ -46,7 +46,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
