--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "gst-plugin-ndi"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Ruben Gonzalez <rubenrua@teltek.es>", "Daniel Vilar <daniel.peiteado@teltek.es>", "Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
 description = "GStreamer NewTek NDI Plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master" }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"] }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"] }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"] }
+glib.workspace = true
+gst = { workspace = true, features = ["v1_16"] }
+gst-base = { workspace = true, features = ["v1_16"] }
+gst-audio = { workspace = true, features = ["v1_16"] }
+gst-video = { workspace = true, features = ["v1_16"] }
 anyhow = "1.0"
 byte-slice-cast = "1"
 byteorder = "1.0"
@@ -23,10 +23,10 @@ libloading = "0.8"
 quick-xml = "0.31"
 smallvec = { version = "1.11", features = ["const_generics"] }
 thiserror = "1.0"
-once_cell = "1"
+once_cell.workspace = true
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 default = ["sink"]
