--- a/net/onvif/Cargo.toml
+++ b/net/onvif/Cargo.toml
@@ -1,25 +1,25 @@
 [package]
 name = "gst-plugin-onvif"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
 description = "GStreamer Rust ONVIF Plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
-gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
+gst = { workspace = true, features = ["v1_20"] }
+gst-rtp = { workspace = true, features = ["v1_20"] }
+gst-base = { workspace = true, features = ["v1_20"] }
+gst-video = { workspace = true, features = ["v1_20"] }
 xmlparser = "0.13"
 chrono = { version = "0.4.31", default-features = false }
-cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master", features=["use_glib"] }
-pango = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master" }
-pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master" }
+cairo-rs.workspace = true
+pango.workspace = true
+pangocairo.workspace = true
 xmltree = "0.10"
-once_cell = "1"
+once_cell.workspace = true
 
 [lib]
 name = "gstrsonvif"
@@ -27,7 +27,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
