--- a/net/raptorq/Cargo.toml
+++ b/net/raptorq/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "gst-plugin-raptorq"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Tomasz Andrzejak <andreiltd@gmail.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 description = "GStreamer RaptorQ FEC Plugin"
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-once_cell = "1"
+gst.workspace = true
+gst-base.workspace = true
+gst-rtp.workspace = true
+once_cell.workspace = true
 raptorq = "1.7"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
+gst-check = { workspace = true, features = ["v1_18"] }
 rand = "0.8"
 
 [lib]
@@ -25,7 +25,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
