--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "gst-plugin-reqwest"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MIT OR Apache-2.0"
 description = "GStreamer reqwest HTTP Source Plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 url = "2.1"
@@ -14,14 +14,14 @@ reqwest = { version = "0.11", features = ["cookies", "gzip"] }
 futures = "0.3"
 headers = "0.3"
 mime = "0.3"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-base.workspace = true
 tokio = { version = "1.0", default-features = false, features = ["time", "rt-multi-thread"] }
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
 
 [lib]
 name = "gstreqwest"
@@ -29,7 +29,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
