--- a/net/rtp/Cargo.toml
+++ b/net/rtp/Cargo.toml
@@ -1,25 +1,25 @@
 [package]
 name = "gst-plugin-rtp"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Vivienne Watermeier <vwatermeier@igalia.com>", "Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
-edition = "2021"
+edition.workspace = true
 description = "GStreamer Rust RTP Plugin"
-rust-version = "1.70"
+rust-version.workspace = true
 
 [dependencies]
 bitstream-io = "2.0"
-gst      = { package = "gstreamer",      git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
-gst-rtp  = { package = "gstreamer-rtp",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"]}
+gst      = { workspace = true, features = ["v1_20"] }
+gst-rtp  = { workspace = true, features = ["v1_20"]}
 chrono = { version = "0.4", default-features = false }
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
+gst-check = { workspace = true, features = ["v1_20"] }
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [lib]
 name = "gstrsrtp"
