--- a/net/webrtchttp/Cargo.toml
+++ b/net/webrtchttp/Cargo.toml
@@ -1,26 +1,26 @@
 [package]
 name = "gst-plugin-webrtchttp"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Taruntej Kanakamalla <taruntej@asymptotic.io"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
-edition = "2021"
+edition.workspace = true
 description = "GStreamer WebRTC Plugin for WebRTC HTTP protocols (WHIP/WHEP)"
-rust-version = "1.70"
+rust-version.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
-gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-webrtc = { workspace = true, features = ["v1_18"] }
+gst-sdp.workspace = true
 reqwest = { version = "0.11", features = ["default-tls"] }
 parse_link_header = {version = "0.3", features = ["url"]}
 tokio = { version = "1.20.1", default-features = false, features = ["time", "rt-multi-thread"] }
 futures = "0.3.23"
 bytes = "1"
 async-recursion = "1.0.0"
-once_cell = "1"
+once_cell.workspace = true
 
 [lib]
 name = "gstwebrtchttp"
@@ -28,7 +28,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
