--- a/text/ahead/Cargo.toml
+++ b/text/ahead/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "gst-plugin-textahead"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Guillaume Desmottes <guillaume@desmottes.be>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
 description = "GStreamer Plugin for displaying upcoming text buffers ahead of time"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-once_cell = "1"
+gst.workspace = true
+once_cell.workspace = true
 
 [lib]
 name = "gsttextahead"
@@ -18,7 +18,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
