--- a/text/json/Cargo.toml
+++ b/text/json/Cargo.toml
@@ -1,23 +1,18 @@
 [package]
 name = "gst-plugin-json"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer JSON Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 
 [dependencies]
-once_cell = "1"
+once_cell.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
-
-[dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer"
-features=["serde"]
+gst = { workspace = true, features = ["serde"]}
 
 [lib]
 name = "gstjson"
@@ -25,12 +20,10 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
-[dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer-check"
+[dev-dependencies]
+gst-check.workspace = true
 
 [features]
 static = []
