--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -1,21 +1,17 @@
 [package]
 name = "gst-plugin-regex"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer Regular Expression Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 
 [dependencies]
-once_cell = "1"
+once_cell.workspace = true
 regex = "1.5"
-
-[dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer"
+gst.workspace = true
 
 [lib]
 name = "gstregex"
@@ -23,12 +19,10 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
-[dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer-check"
+[dev-dependencies]
+gst-check.workspace = true
 
 [features]
 static = []
