--- a/text/wrap/Cargo.toml
+++ b/text/wrap/Cargo.toml
@@ -1,22 +1,18 @@
 [package]
 name = "gst-plugin-textwrap"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer Text Wrap Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 
 [dependencies]
 textwrap = { version = "0.16", features = ["hyphenation"] }
 hyphenation = "0.8"
-once_cell = "1"
-
-[dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer"
+once_cell.workspace = true
+gst.workspace = true
 
 [lib]
 name = "gsttextwrap"
@@ -24,12 +20,10 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
-[dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer-check"
+[dev-dependencies]
+gst-check.workspace = true
 
 [features]
 static = []
