--- a/utils/livesync/Cargo.toml
+++ b/utils/livesync/Cargo.toml
@@ -1,26 +1,26 @@
 [package]
 name = "gst-plugin-livesync"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Jan Alexander Steffens (heftig) <jan.steffens@ltnglobal.com>"]
 license = "MPL-2.0"
 description = "Livesync Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-edition = "2021"
-rust-version = "1.70"
+repository.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master", optional = true }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gio = { workspace = true, optional = true }
+gst.workspace = true
+gst-audio.workspace = true
 gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
-gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "master", optional = true }
+gtk = { workspace = true, optional = true }
 muldiv = "1.0"
 num-rational = { version = "0.4", default-features = false, features = [] }
-once_cell = "1"
+once_cell.workspace = true
 parking_lot = "0.12"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-check.workspace = true
 
 [lib]
 name = "gstlivesync"
@@ -37,7 +37,7 @@ name = "livesync"
 path = "tests/livesync.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
