--- a/utils/tracers/Cargo.toml
+++ b/utils/tracers/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
 name = "gst-plugin-tracers"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Guillaume Desmottes <guillaume.desmottes@onestream.live>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
-edition = "2021"
+edition.workspace = true
 description = "GStreamer Rust tracers plugin"
-rust-version = "1.70"
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
 anyhow = "1"
 regex = "1"
-once_cell = "1"
+once_cell.workspace = true
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3"
@@ -23,7 +23,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
