--- a/utils/uriplaylistbin/Cargo.toml
+++ b/utils/uriplaylistbin/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "gst-plugin-uriplaylistbin"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Guillaume Desmottes <guillaume.desmottes@onestream.live>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
-edition = "2021"
+edition.workspace = true
 description = "GStreamer Playlist Playback Plugin"
-rust-version = "1.70"
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
 anyhow = "1"
 clap = { version = "4", optional = true, features = ["derive"] }
 thiserror = "1"
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-app.workspace = true
 url = "2.2"
 more-asserts = "0.3"
 
@@ -31,7 +31,7 @@ path = "examples/playlist.rs"
 required-features = ["clap"]
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
