--- a/video/cdg/Cargo.toml
+++ b/video/cdg/Cargo.toml
@@ -1,25 +1,25 @@
 [package]
 name = "gst-plugin-cdg"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MIT OR Apache-2.0"
 description = "GStreamer CDG codec Plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-base.workspace = true
+gst-video.workspace = true
 cdg = "0.1"
 cdg_renderer = "0.7"
 image = { version = "0.24", default-features = false }
 muldiv = "1.0"
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-app.workspace = true
 
 [lib]
 name = "gstcdg"
@@ -27,7 +27,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
