--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "gst-plugin-closedcaption"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Sebastian Dröge <sebastian@centricular.com>", "Jordan Petridis <jordan@centricular.com>", "Matthew Waters <matthew@centricular.com>"]
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer Rust Closed Caption Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 
 [dependencies]
 anyhow = "1"
@@ -15,41 +15,22 @@ either = "1"
 uuid = { version = "1.0", features = ["v4"] }
 chrono = "0.4.23"
 atomic_refcell = "0.1"
-cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master", features=["use_glib"] }
-pango = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master" }
-pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master" }
+cairo-rs.workspace = true
+pango.workspace = true
+pangocairo.workspace = true
 byteorder = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
 cea708-types = "0.3"
-once_cell = "1"
-
-[dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-features = ["v1_16"]
-package="gstreamer"
-
-[dependencies.gst-base]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-features = ["v1_16"]
-package="gstreamer-base"
-
-[dependencies.gst-video]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-features = ["v1_16"]
-package="gstreamer-video"
+once_cell.workspace = true
+gst = { workspace = true, features = ["v1_16"]}
+gst-base = { workspace = true, features = ["v1_16"]}
+gst-video = { workspace = true, features = ["v1_16"]}
 
 [dev-dependencies]
 pretty_assertions = "1"
 rand = { version = "0.8", features = ["small_rng"] }
-
-[dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer-check"
+gst-check.workspace = true
 
 [lib]
 name = "gstrsclosedcaption"
@@ -57,7 +38,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 cc = "1.0"
 
 [features]
