--- a/video/dav1d/Cargo.toml
+++ b/video/dav1d/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
 name = "gst-plugin-dav1d"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Philippe Normand <philn@igalia.com>"]
-edition = "2021"
-rust-version = "1.70"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+edition.workspace = true
+rust-version.workspace = true
+repository.workspace = true
 license = "MIT OR Apache-2.0"
 description = "GStreamer dav1d AV1 decoder Plugin"
 
 [dependencies]
 dav1d = "0.9"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-base.workspace = true
+gst-video.workspace = true
 num_cpus = "1.0"
-once_cell = "1"
+once_cell.workspace = true
 
 [lib]
 name = "gstdav1d"
@@ -22,7 +22,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
