--- a/video/gif/Cargo.toml
+++ b/video/gif/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "gst-plugin-gif"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Markus Ebner <info@ebner-markus.de>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MIT OR Apache-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer GIF plugin"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-video.workspace = true
 gif = "0.13"
 atomic_refcell = "0.1"
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-check.workspace = true
 
 [lib]
 name = "gstgif"
@@ -28,7 +28,7 @@ name = "testvideosrc2gif"
 path = "examples/testvideosrc2gif.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
