--- a/video/gtk4/Cargo.toml
+++ b/video/gtk4/Cargo.toml
@@ -1,38 +1,38 @@
 [package]
 name = "gst-plugin-gtk4"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>", "Jordan Petridis <jordan@centricular.com>", "Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer GTK 4 Sink element and Paintable widget"
 
 [dependencies]
-gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "master" }
-gdk_wayland = { package = "gdk4-wayland", git = "https://github.com/gtk-rs/gtk4-rs", branch = "master", features = ["v4_4"], optional = true}
-gdk_x11 = { package = "gdk4-x11", git = "https://github.com/gtk-rs/gtk4-rs", branch = "master", features = ["v4_4"], optional = true}
+gtk.workspace = true
+gdk-wayland = { workspace = true, features = ["v4_4"], optional = true}
+gdk-x11 = { workspace = true, features = ["v4_4"], optional = true}
 
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"] }
-gst_base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst_video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst_gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"], optional = true }
+gst = { workspace = true, features = ["v1_16"] }
+gst-base.workspace = true
+gst-video.workspace = true
+gst-gl = { workspace = true, features = ["v1_16"], optional = true }
 
-gst_gl_wayland = { package = "gstreamer-gl-wayland", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"], optional = true }
-gst_gl_x11 = { package = "gstreamer-gl-x11", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"], optional = true }
-gst_gl_egl = { package = "gstreamer-gl-egl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"], optional = true }
+gst-gl-wayland = { workspace = true, features = ["v1_16"], optional = true }
+gst-gl-x11 = { workspace = true, features = ["v1_16"], optional = true }
+gst-gl-egl = { workspace = true, features = ["v1_16"], optional = true }
 async-channel = "2.0.0"
-once_cell = "1"
+once_cell.workspace = true
 
 
 [target.'cfg(target_os = "macos")'.dependencies]
-gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "master", features = ["v4_6"] }
-gst_gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"] }
+gtk = { workspace = true, features = ["v4_6"] }
+gst-gl = { workspace = true, features = ["v1_16"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "master", features = ["v4_6"] }
-gst_gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
-gdk_win32 = { package = "gdk4-win32", git = "https://github.com/gtk-rs/gtk4-rs", branch = "master", features = ["v4_4"]}
+gtk = { workspace = true, features = ["v4_6"] }
+gst-gl = { workspace = true, features = ["v1_20"] }
+gdk-win32 = { workspace = true, features = ["v4_4"]}
 windows-sys = { version = "0.52", features = ["Win32_Graphics_OpenGL", "Win32_Foundation", "Win32_Graphics_Gdi"] }
 
 [lib]
@@ -41,15 +41,15 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 default = []
 static = []
-wayland = ["gtk/v4_6", "gdk_wayland", "gst_gl", "gst_gl_wayland"]
-x11glx = ["gtk/v4_6", "gdk_x11", "gst_gl", "gst_gl_x11"]
-x11egl = ["gtk/v4_6", "gdk_x11", "gst_gl", "gst_gl_egl"]
-winegl = ["gdk_win32/egl", "gst_gl_egl"]
+wayland = ["gtk/v4_6", "gdk-wayland", "gst-gl", "gst-gl-wayland"]
+x11glx = ["gtk/v4_6", "gdk-x11", "gst-gl", "gst-gl-x11"]
+x11egl = ["gtk/v4_6", "gdk-x11", "gst-gl", "gst-gl-egl"]
+winegl = ["gdk-win32/egl", "gst-gl-egl"]
 capi = []
 doc = ["gst/v1_18"]
 
