--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "gst-plugin-rav1e"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MIT OR Apache-2.0"
 description = "GStreamer rav1e AV1 Encoder Plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst.workspace = true
+gst-video.workspace = true
 rav1e = { version = "0.7", default-features = false, features = ["threading"] }
 atomic_refcell = "0.1"
-once_cell = "1"
+once_cell.workspace = true
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-check.workspace = true
 
 [lib]
 name = "gstrav1e"
@@ -24,7 +24,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 default = ["hdr"]
