--- a/video/videofx/Cargo.toml
+++ b/video/videofx/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "gst-plugin-videofx"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Sanchayan Maity <sanchayan@asymptotic.io>", "Rafael Caricio <rafael@caricio.com>"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
 description = "GStreamer Rust Video Effects Plugin"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master", features=["use_glib"] }
+cairo-rs.workspace = true
 atomic_refcell = "0.1"
 color-thief = "0.2.2"
 color-name = "1.0.0"
@@ -17,30 +17,13 @@ image = { version = "0.24.2", default-features = false }
 image_hasher = "1.0.0"
 dssim-core = { version = "3.2.3", optional = true }
 rgb = { version = "0.8", optional = true }
-once_cell = "1"
+once_cell.workspace = true
+gst = { workspace = true, features = ["v1_16"] }
+gst-base = { workspace = true, features = ["v1_16"] }
+gst-video = { workspace = true, features = ["v1_16"] }
 
-[dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-features = ["v1_16"]
-package = "gstreamer"
-
-[dependencies.gst-base]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-features = ["v1_16"]
-package = "gstreamer-base"
-
-[dependencies.gst-video]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-features = ["v1_16"]
-package = "gstreamer-video"
-
-[dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package = "gstreamer-check"
+[dev-dependencies]
+gst-check.workspace = true
 
 [lib]
 name = "gstrsvideofx"
@@ -48,7 +31,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
