--- a/video/webp/Cargo.toml
+++ b/video/webp/Cargo.toml
@@ -1,34 +1,22 @@
 [package]
 name = "gst-plugin-webp"
-version = "0.12.0-alpha.1"
+version.workspace = true
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
-edition = "2021"
-rust-version = "1.70"
+edition.workspace = true
+rust-version.workspace = true
 description = "GStreamer WebP Plugin"
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 
 [dependencies]
 libwebp-sys2 = { version = "0.1.2", features = ["demux", "0_5"] }
-once_cell = "1"
-
-[dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer"
-
-[dependencies.gst-video]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer-video"
+once_cell.workspace = true
+gst.workspace = true
+gst-video.workspace = true
 
 [dev-dependencies]
 pretty_assertions = "1"
-
-[dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-branch = "main"
-package="gstreamer-check"
+gst-check.workspace = true
 
 [lib]
 name = "gstrswebp"
@@ -36,7 +24,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
