deny: Add override for heck 0.4
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1508>

--- a/deny.toml
+++ b/deny.toml
@@ -191,6 +191,11 @@ version = "0.21"
 name = "winnow"
 version = "0.5"
 
+# Various crates depend on an older version of heck
+[[bans.skip]]
+name = "heck"
+version = "0.4"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
