rtp: Switch from chrono to time
Which allows to simplify quite a bit of code and avoids us having to
handle some API deprecations.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1508>

--- a/net/rtp/Cargo.toml
+++ b/net/rtp/Cargo.toml
@@ -12,7 +12,7 @@ rust-version.workspace = true
 bitstream-io = "2.0"
 gst      = { workspace = true, features = ["v1_20"] }
 gst-rtp  = { workspace = true, features = ["v1_20"]}
-chrono = { version = "0.4", default-features = false }
+time = { version = "0.3", default-features = false, features = ["std"] }
 once_cell.workspace = true
 
 [dev-dependencies]
