dav1d: Require dav1d-rs 0.10
This version depends on libdav1d >= 1.3.0. Older versions are no longer
supported, due to an ABI/API break introduced in 1.3.0.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1512>

--- a/meson.build
+++ b/meson.build
@@ -185,7 +185,7 @@ plugins = {
   },
   'dav1d': {
     'library': 'libgstdav1d',
-    'extra-deps': {'dav1d': ['>=1.0', '<1.3']},
+    'extra-deps': {'dav1d': ['>=1.3']},
   },
   'ffv1': {'library': 'libgstffv1'},
   'flavors': {'library': 'libgstrsflv'},
