webrtc: webrtcsink: set perfect-timestamp=true on audio encoders
Chrome audio decoder doesn't cope well with not perfect ts, generating
noises in the audio.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1524>

--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -11,6 +11,7 @@ rust-version.workspace = true
 [dependencies]
 gst = { workspace = true, features = ["v1_20", "serde"] }
 gst-app = { workspace = true, features = ["v1_20"] }
+gst-audio = { workspace = true, features = ["v1_20", "serde"] }
 gst-video = { workspace = true, features = ["v1_20", "serde"] }
 gst-webrtc = { workspace = true, features = ["v1_20"] }
 gst-sdp = { workspace = true, features = ["v1_20"] }
