webrtc: add precise synchronization example
This example demonstrates a sender / receiver setup which ensures precise
synchronization of multiple streams in a single session.

[RFC 6051]-style rapid synchronization of RTP streams is available as an option.
See the [Instantaneous RTP synchronization...] blog post for details about this
mode and an example based on RTSP instead of WebRTC.

[RFC 6051]: https://datatracker.ietf.org/doc/html/rfc6051
[Instantaneous RTP synchronization...]: https://coaxion.net/blog/2022/05/instantaneous-rtp-synchronization-retrieval-of-absolute-sender-clock-times-with-gstreamer/

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1463>

--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -61,6 +61,8 @@ rand = "0.8"
 once_cell.workspace = true
 
 [dev-dependencies]
+gst-net = { workspace = true, features = ["v1_20"] }
+gst-plugin-rtp = { path = "../rtp" }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-log = "0.2"
@@ -103,3 +105,9 @@ name = "webrtcsink-high-quality-tune"
 
 [[example]]
 name = "webrtcsink-custom-signaller"
+
+[[example]]
+name = "webrtc-precise-sync-send"
+
+[[example]]
+name = "webrtc-precise-sync-recv"
