--- a/meson_options.txt
+++ b/meson_options.txt
@@ -34,6 +34,7 @@ option('rtsp', type: 'feature', value: 'auto', description: 'Build rtsp plugin')
 option('rtp', type: 'feature', value: 'auto', description: 'Build rtp plugin')
 option('webrtc', type: 'feature', value: 'auto', yield: true, description: 'Build webrtc plugin')
 option('webrtchttp', type: 'feature', value: 'auto', description: 'Build webrtchttp plugin')
+option('quinn', type: 'feature', value: 'auto', description: 'Build quinn plugin')
 
 # text
 option('textahead', type: 'feature', value: 'auto', description: 'Build textahead plugin')
