--- a/net/quinn/Cargo.toml
+++ b/net/quinn/Cargo.toml
@@ -2,18 +2,18 @@
 name = "gst-plugin-quinn"
 version.workspace = true
 authors = ["Sanchayan Maity <sanchayan@asymptotic.io"]
-repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+repository.workspace = true
 license = "MPL-2.0"
-edition = "2021"
+edition.workspace = true
 description = "GStreamer Plugin for QUIC"
-rust-version = "1.63"
+rust-version.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-once_cell = "1.19"
+gst.workspace = true
+gst-base.workspace = true
+once_cell.workspace = true
 tokio = { version = "1.36.0", default-features = false, features = ["time", "rt-multi-thread"] }
 futures = "0.3.30"
 quinn = "0.10.2"
@@ -24,17 +24,16 @@ bytes = "1.5.0"
 thiserror = "1"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
+gst-check = { workspace = true, features = ["v1_20"] }
 serial_test = "3"
 
 [lib]
 name = "gstquinn"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
-required-features = ["tls-rustls"]
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper.workspace = true
 
 [features]
 static = []
@@ -42,7 +41,7 @@ capi = []
 doc = []
 
 [package.metadata.capi]
-min_version = "0.8.0"
+min_version = "0.9.21"
 
 [package.metadata.capi.header]
 enabled = false
@@ -50,6 +49,7 @@ enabled = false
 [package.metadata.capi.library]
 install_subdir = "gstreamer-1.0"
 versioning = false
+import_library = false
 
 [package.metadata.capi.pkg_config]
 requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0"
