--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -362,7 +362,10 @@ outdated:
   script:
     - cargo update --color=always
     # env_logger is ignored because it requires Rust >= 1.71
-    - cargo outdated --color=always --root-deps-only --ignore env_logger --exit-code 1 -v
+    #
+    # rustls/rustls-pemfile/rcgen are ignored because quinn depends on an old version
+    #  https://github.com/quinn-rs/quinn/commit/a85a4c12eec180b035328cf5f6286ce83edc9a47
+    - cargo outdated --color=always --root-deps-only --ignore env_logger,rustls,rustls-pemfile,rcgen --exit-code 1 -v
 
 coverage:
   allow_failure: true
