deny: Re-add rustls override because the AWS SDK still uses an old version

--- a/deny.toml
+++ b/deny.toml
@@ -226,6 +226,17 @@ version = "1.0"
 name = "winreg"
 version = "0.50"
 
+# The AWS SDK uses old versions of rustls and related crates
+[[bans.skip]]
+name = "rustls"
+version = "0.21"
+[[bans.skip]]
+name = "rustls-native-certs"
+version = "0.6"
+[[bans.skip]]
+name = "rustls-webpki"
+version = "0.101"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
