--- a/meson_options.txt
+++ b/meson_options.txt
@@ -26,6 +26,7 @@ option('mp4', type: 'feature', value: 'auto', description: 'Build mp4 plugin')
 # net
 option('aws', type: 'feature', value: 'auto', description: 'Build aws plugin')
 option('hlssink3', type: 'feature', value: 'auto', description: 'Build hlssink3 plugin')
+option('mpegtslive', type: 'feature', value: 'auto', description: 'Build mpegtslive plugin')
 option('ndi', type: 'feature', value: 'auto', description: 'Build ndi plugin')
 option('onvif', type: 'feature', value: 'auto', description: 'Build onvif plugin')
 option('raptorq', type: 'feature', value: 'auto', description: 'Build raptorq plugin')
