Update Cargo.lock and MSRV to 1.71
cea608-types requires that now because it updated the env_logger
dependency. As a result, we can also update it here now.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1622>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -361,8 +361,7 @@ outdated:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
   script:
     - cargo update --color=always
-    # env_logger is ignored because it requires Rust >= 1.71
-    - cargo outdated --color=always --root-deps-only --ignore env_logger --exit-code 1 -v
+    - cargo outdated --color=always --root-deps-only --exit-code 1 -v
 
 coverage:
   allow_failure: true
