meson: Printing a list is only available with meson >=1.3
Fixes https://gitlab.freedesktop.org/tpm/gstreamer/-/jobs/60108579

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1632>

--- a/meson.build
+++ b/meson.build
@@ -414,7 +414,12 @@ foreach plugin_name, details: plugins
     endif
     deps_cache += {dep_name: dep}
     if not dep.found()
-      debug(f'@plugin_name@ dependency @dep_name@ @dep_ver@ not found, skipping')
+      if dep_ver.length() != 0
+        dep_ver_msg = ' '.join(dep_ver)
+        debug(f'@plugin_name@ dependency @dep_name@ @dep_ver_msg@ not found, skipping')
+      else
+        debug(f'@plugin_name@ dependency @dep_name@ not found, skipping')
+      endif
       plugin_deps_found = false
       break
     endif
